Generación de vistas - uso de cookies - idConnected como parametro en verificacion y firma de token - relacion tareas y usuario
